# swarmclaw

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  README_JA.md  features.md  sdkconfig.defaults  sdkconfig.defaults.esp32s3
.github/workflows/: release.yml
components/micropython_embed/: CMakeLists.txt  micropython_embed.mk
components/micropython_embed/genhdr/: moduledefs.h  mpversion.h  qstrdefs.generated.h
components/micropython_embed/port/: embed_util.c  mpconfigport.h  mphalport.c  mphalport.h  qstrdefsport.h
docs/: ARCHITECTURE.md  TODO.md
main/: CMakeLists.txt  idf_component.yml  mimi.c  mimi_config.h  mimi_secrets.h.example
main/agent/: agent_loop.c
main/ble/: ble_client.c  ble_client.h
main/buddy/: buddy.h  buddy_agent.c  buddy_ble.c  buddy_contacts.c  buddy_espnow.c
main/bus/: message_bus.c
main/channels/feishu/: feishu_bot.c  feishu_bot.h
main/channels/telegram/: telegram_bot.c  telegram_bot.h
main/cli/: serial_cli.c
main/cron/: cron_service.c
main/llm/: llm_proxy.c  llm_proxy.h
main/lua/: lua_gpio_lib.c  lua_gpio_lib.h  lua_runner.c  lua_runner.h
main/mpy/: mpy_gpio_module.c  mpy_gpio_module.h  mpy_port_io.c  mpy_runner.c  mpy_runner.h
main/onboard/: onboard_html.h  wifi_onboard.c
main/skills/: skill_loader.c  skill_loader.h
main/time/: time_sync.c  time_sync.h
main/tools/: tool_arxiv.c  tool_ble.c  tool_ble.h  tool_get_time.c  tool_gpio.c  tool_gpio.h  tool_http_request.c  tool_http_request.h  tool_registry.c  tool_script.c  tool_script.h  tool_web_search.c  tool_web_search.h
main/wifi/: wifi_manager.c  wifi_manager.h
mpy/: CMakeLists.txt  micropython_embed.mk  mpconfigport.h  qstrdefsport.h
spiffs_data/config/: SOUL.md
spiffs_data/skills/: a2a.md  arxiv-search.md  ble-temperature-humidity.md  camera-capture.md  gpio.md  python.md
