# ESP-IDF component wrapper for MicroPython embed (v1.25.0)
#
# Regenerate the embed package with:
#   cd components/micropython_embed
#   make -f micropython_embed.mk

set(MPY_SRCS
    port/embed_util.c
    port/mphalport.c
    py/argcheck.c
    py/asmarm.c
    py/asmbase.c
    py/asmrv32.c
    py/asmthumb.c
    py/asmx64.c
    py/asmx86.c
    py/asmxtensa.c
    py/bc.c
    py/binary.c
    py/builtinevex.c
    py/builtinhelp.c
    py/builtinimport.c
    py/compile.c
    py/cstack.c
    py/emitbc.c
    py/emitcommon.c
    py/emitglue.c
    py/emitinlinerv32.c
    py/emitinlinethumb.c
    py/emitinlinextensa.c
    py/emitnarm.c
    py/emitnative.c
    py/emitndebug.c
    py/emitnrv32.c
    py/emitnthumb.c
    py/emitnx64.c
    py/emitnx86.c
    py/emitnxtensa.c
    py/emitnxtensawin.c
    py/formatfloat.c
    py/frozenmod.c
    py/gc.c
    py/lexer.c
    py/malloc.c
    py/map.c
    py/modarray.c
    py/modbuiltins.c
    py/modcmath.c
    py/modcollections.c
    py/moderrno.c
    py/modgc.c
    py/modio.c
    py/modmath.c
    py/modmicropython.c
    py/modstruct.c
    py/modsys.c
    py/modthread.c
    py/mpprint.c
    py/mpstate.c
    py/mpz.c
    py/nativeglue.c
    py/nlr.c
    py/nlraarch64.c
    py/nlrmips.c
    py/nlrpowerpc.c
    py/nlrrv32.c
    py/nlrrv64.c
    py/nlrsetjmp.c
    py/nlrthumb.c
    py/nlrx64.c
    py/nlrx86.c
    py/nlrxtensa.c
    py/obj.c
    py/objarray.c
    py/objattrtuple.c
    py/objbool.c
    py/objboundmeth.c
    py/objcell.c
    py/objclosure.c
    py/objcode.c
    py/objcomplex.c
    py/objdeque.c
    py/objdict.c
    py/objenumerate.c
    py/objexcept.c
    py/objfilter.c
    py/objfloat.c
    py/objfun.c
    py/objgenerator.c
    py/objgetitemiter.c
    py/objint.c
    py/objint_longlong.c
    py/objint_mpz.c
    py/objlist.c
    py/objmap.c
    py/objmodule.c
    py/objnamedtuple.c
    py/objnone.c
    py/objobject.c
    py/objpolyiter.c
    py/objproperty.c
    py/objrange.c
    py/objreversed.c
    py/objringio.c
    py/objset.c
    py/objsingleton.c
    py/objslice.c
    py/objstr.c
    py/objstringio.c
    py/objstrunicode.c
    py/objtuple.c
    py/objtype.c
    py/objzip.c
    py/opmethods.c
    py/pairheap.c
    py/parse.c
    py/parsenum.c
    py/parsenumbase.c
    py/persistentcode.c
    py/profile.c
    py/pystack.c
    py/qstr.c
    py/reader.c
    py/repl.c
    py/ringbuf.c
    py/runtime.c
    py/runtime_utils.c
    py/scheduler.c
    py/scope.c
    py/sequence.c
    py/showbc.c
    py/smallint.c
    py/stackctrl.c
    py/stream.c
    py/unicode.c
    py/vm.c
    py/vstr.c
    py/warning.c
    shared/runtime/gchelper_generic.c
)

idf_component_register(
    SRCS ${MPY_SRCS}
    INCLUDE_DIRS "." "port"
    PRIV_INCLUDE_DIRS "genhdr"
)

# Suppress warnings in generated MicroPython core code
target_compile_options(${COMPONENT_LIB} PRIVATE -Wno-error -w)

# Prevent conflict with newlib's __assert_func on ESP-IDF
target_compile_definitions(${COMPONENT_LIB} PRIVATE NDEBUG)
